card style added

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,20 @@
 .mdl-mini-footer {
   color: rgb(158,158,158);
   background-color: rgb(33,150,243) !important; }
+
+/* Image card  */ 
+.demo-card-image.mdl-card {
+  width: auto ;
+  height: 100%;
+  background: url('img/menu_moustique.jpg') center / cover;
+}
+.demo-card-image > .mdl-card__actions {
+  height: 52px;
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.demo-card-image__filename {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
