--- a/css/custom.css
+++ b/css/custom.css
@@ -3,8 +3,12 @@
   background-color: rgb(33,150,243) !important; 
   /*height: 56px !important;*/
   color: rgb(250,250,250) !important;
-  padding: 0px 16px !important;
+  padding: 10px 16px !important;
 } 
+
+.align_center{
+  text-align: center;
+}
 
 /* Image card  */ 
 .demo-card-image.mdl-card {
