card title padding set to none

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,7 +17,7 @@
 }
 .demo-card-image > .mdl-card__actions {
   height: 52px;
-  padding: 16px;
+/*  padding: 16px;*/
   background: rgba(0, 0, 0, 0.2);
 }
 .demo-card-image__filename {
