--- a/css/custom.css
+++ b/css/custom.css
@@ -58,3 +58,10 @@
 
     .mdl-layout__header-row {
       padding: 10px 16px 0 50px; }
+
+.container {
+  max-width: 900px;
+  padding: 0;
+  width: 100%;
+  margin: 0 auto;
+}      
