--- a/css/custom.css
+++ b/css/custom.css
@@ -61,7 +61,8 @@
 
 .container {
   max-width: 900px;
-  padding: 0;
+  padding: 20px 56px;
   width: 100%;
   margin: 0 auto;
+  box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2);
 }      
