--- a/css/custom.css
+++ b/css/custom.css
@@ -176,3 +176,10 @@
 .figureImg {
   text-align: center;
 }
+.mdl-layout__drawer{
+  background-color: rgb(33,150,243) !important;
+  color: white;
+}
+.mdl-navigation__link{
+  color: white !important;
+}
