footer bug fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,7 @@
   /*height: 56px !important;*/
   color: rgb(250,250,250) !important;
   padding: 10px 16px !important;
+  width: 100%;
 } 
 
 .align_center{
