header menu items color set to gray

--- a/css/custom.css
+++ b/css/custom.css
@@ -180,7 +180,7 @@
   color: white;
 }
 .mdl-navigation__link{
-  color: white !important;
+  color: #999 !important;
 }
 .mdl-logo{
   margin-left: 10px;
