link color changed

--- a/css/custom.css
+++ b/css/custom.css
@@ -184,7 +184,7 @@
   margin-right: 10px;
 }
 .mdl-navigation__link{
-  color: #999 !important;
+  color: #FFF !important;
 }
 .mdl-logo{
   margin-left: 10px;
