--- a/css/custom.css
+++ b/css/custom.css
@@ -230,3 +230,6 @@
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
   padding: 10px 16px;
 }
+.mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
+  background-color: rgba(116, 194, 255, 0.57) !important;
+}
