--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,7 @@
   background-color: rgb(33,150,243) !important; 
   color: rgb(250,250,250) !important;
   padding: 10px 16px !important;
+  width: 100%;
 } 
 
 .align_center{
