--- a/css/custom.css
+++ b/css/custom.css
@@ -219,7 +219,7 @@
 .search_bar_results {
   position: absolute;
   z-index: 1000;
-  max-height: 100%;
+/*  max-height: 100%;*/
   min-width: 100%;
   overflow: scroll;
   padding-left: 2%;
