--- a/css/custom.css
+++ b/css/custom.css
@@ -217,7 +217,7 @@
 }
 
 .search_bar_results {
-  position: absolute;
+ /* position: absolute;*/
   z-index: 1000;
 /*  max-height: 100%;
   min-width: 100%;*/
