--- a/css/custom.css
+++ b/css/custom.css
@@ -220,8 +220,8 @@
  /* position: absolute;*/
   z-index: 1000;
 /*  max-height: 100%;
-  min-width: 100%;*/
-  overflow: scroll;
+  min-width: 100%;
+  overflow: scroll;*/
   padding-left: 2%;
   padding-right: 2%;
   background-color: rgba(255,255,255,0.7);
