--- a/css/custom.css
+++ b/css/custom.css
@@ -217,14 +217,13 @@
 }
 
 .search_bar_results {
- /* position: absolute;*/
+  position: absolute;
   z-index: 1000;
-/*  max-height: 100%;
+  max-height: 100%;
   min-width: 100%;
-  overflow: scroll;*/
+  overflow: scroll;
   padding-left: 2%;
-  padding-right: 2%;
-  background-color: rgba(255,255,255,1);
+  background-color: rgba(255,255,255,.95);
 }
 
 .search_bar_results_parent{
