--- a/css/adresses.css
+++ b/css/adresses.css
@@ -39,9 +39,11 @@ text-decoration : none;
 
 #results ul a { display: block; position: relative; width: 100%; }
 
-.place{
+.place {
   margin-bottom: 20px;
   padding: 10px 0 0 0;
+  width: 80%;
+  float: left;
 }
 .place h2 { 
     font-size: 1.5em; 
