--- a/css/custom.css
+++ b/css/custom.css
@@ -197,6 +197,9 @@
   background-color: rgb(33,150,243);
   color: rgb(255, 255, 255);
 }
+.table_center{
+  margin: 0 auto;
+}
 .bg_search{
   background-color: rgb(33,150,243);
 }
